--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -4,6 +4,7 @@ $serif: skolar-1, skolar-2, serif;
 
 $red: #ad141e;
 $gray: #eee;
+$off-white: darken(white, 1.5);
 $lightwarmgray: #F5F5F0;
 $warmgray: #D9D4CC;
 $darkwarmgray: #6C6A66;
@@ -17,5 +18,6 @@ $fg-column: $unit;
 $fg-gutter: $gutter;
 $fg-max-columns: 12;
 $max-width: 1100px; // ensuring alignment between footer and content
+$footer-width: 741px;
 
 $list-style: circle;
